--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,12 @@ dependencies:
     sdk: flutter
   permission_handler: ^10.2.0
   iconify_flutter: ^0.0.5
-
+  get: ^4.1.4
+  http: any
+  geolocator: ^7.1.0
+  geocoding: ^2.0.0
+  flutter_typeahead: ^3.1.3
+  flutter_google_places: ^0.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
