--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geocoding: ^2.0.0
   flutter_typeahead: ^3.1.3
   flutter_google_places: ^0.3.0
+  provider: ^6.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   
