--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,14 +41,16 @@ dependencies:
   flutter_typeahead: ^3.1.3
   flutter_google_places: ^0.3.0
   provider: ^6.0.4
+  flutter_native_splash: ^2.2.14
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  
+flutter_native_splash:
+  color: "#E5F0EE"
+  image: assets/logo.png
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
