--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.1
   get: ^4.1.4
-  http: any
+  http: ^0.13.5
   uuid: ^3.0.6
   geolocator: ^7.1.0
   geocoding: ^2.0.0
