--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,21 +29,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+
   permission_handler: ^10.2.0
   iconify_flutter: ^0.0.5
-  cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.2.1
+  google_maps_flutter: ^2.2.5
   get: ^4.1.4
   http: ^0.13.5
   uuid: ^3.0.6
-  geolocator: ^7.1.0
+  geolocator: ^9.0.2
   geocoding: ^2.0.0
-  flutter_typeahead: ^3.1.3
-  flutter_google_places: ^0.3.0
+  flutter_typeahead: ^4.3.7
+
+  # flutter_google_places: ^0.3.0
+
   provider: ^6.0.4
   flutter_native_splash: ^2.2.14
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
 flutter_native_splash:
   color: "#E5F0EE"
   image: assets/logo.png
